--- a/_posts/2019-06-30-the-us-narrative-today.html
+++ b/_posts/2019-06-30-the-us-narrative-today.html
@@ -584,107 +584,107 @@ stories:
   domain: http://www.miaminewtimes.com/
   link: https://www.miaminewtimes.com/restaurants/bernie-sanders-debate-preps-at-miamis-batch-gastropub-11206253
 images:
-- name: windowmountain-window-mountain-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-monet-one.jpg
-- name: berlinwall2-berlinwall-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-graham-sutherland.jpg
-- name: machine-road-machine-road-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-alien-goggles.jpg
-- name: powerlines-power-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-blue-brush.jpg
-- name: white-house-lawn-white-house-window-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-emily-carr.jpg
-- name: berlinwall-DSC-0084-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-really-hot.jpg
-- name: dc-statue-dcstatue-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-far-away.jpg
-- name: window-window-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-blue-granite.jpg
-- name: oldroad-old-road-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-blue-granite.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-alberto-giacometti.jpg
-- name: carry-load-carryload-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-oily-mcoilface.jpg
-- name: cargo-ship-cargo-ship-on-sea-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-rainbow-festival.jpg
-- name: machine-road-machine-road-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-pablo-blue.jpg
-- name: yosemite-yosemite-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-blue-granite.jpg
-- name: oldcabin-store-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-green-zuma.jpg
-- name: razorcliff-razorcliff-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-blue-circuit.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-kandinsky-bv.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-pablo-blue.jpg
-- name: beach-clouds-lifeguard-beachclouds-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-plentiful.jpg
-- name: old-barn-old-barn-1500-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-blue-brush.jpg
-- name: oldhouse-oldhouse-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-plentiful.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-copper-circuit-2.jpg
-- name: crow_gred_mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_gred_mash.jpg
-- name: old-house-oldhouse-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-kandinsky-bv.jpg
-- name: oldsmallboat-oldsmallboat-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-blue-circuit.jpg
-- name: oldhousecars-house-old-cars-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-crabapple.jpg
-- name: catacombs-catacombs-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-blue-circuit-5.jpg
-- name: beach-rocks-beach-rocks-currents-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-ww2-color.jpg
-- name: downtown-la.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-la.JPG
-- name: containership-containership-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-constitution.jpg
-- name: flower-barbed-wire-flower-barbed-wire-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-mucha-mult.jpg
-- name: liberty-back-statue-liberty-back-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-sunday.jpg
-- name: catacombs-catacombs-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-yellow-paper.jpg
-- name: gypsymosaic-gypsy-eyes-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-colorful-blocks.jpg
-- name: oldtrain-oldtrain-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-umberto-bocc.jpg
-- name: art-museum-art-museum-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-yellow-collage.jpg
-- name: beach-rocks-beach-rocks-currents-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-purple-storm.jpg
-- name: mosaic-face-mosaic-face-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-far-away.jpg
-- name: old-granary-field-granaryfield-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-crunch-paper.jpg
-- name: containership-containership-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-far-away.jpg
-- name: old-door-lock-old-door-lock-2-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-ww2-color.jpg
-- name: sand-hand-sand-hand-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-clean-view.jpg
-- name: gears-4882162452-fa3126b38d-b-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-smoking-cigarette.jpg
-- name: oldhouse-granaryfield-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-matrix.jpg
-- name: gears-4882162452-fa3126b38d-b-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-colorful-blocks.jpg
-- name: amusement-park-amusement-park-2-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-purp-paper.jpg
-- name: razorcliff-razorcliff-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-emily-carr.jpg
-- name: aws-s3-square-containership-dark-dali-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-containership-dark-dali-square.jpg
-- name: razorcliff-razorcliff-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-matrix.jpg
-- name: liberty-back-statue-liberty-back-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-alberto-giacometti.jpg
-- name: curtain-curtain-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-kandinsky-bv.jpg
+- name: old-barn-old-barn-1500-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-blue-electricity.jpg
+- name: abe-lincoln-one-sand-paper-file-00-00-15-87.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-sand-paper-file-00-00-15-87.jpg
+- name: blossombar-oily-mcoilface-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-oily-mcoilface-file-00-00-24-99.jpg
+- name: flower-barbed-wire-flower-barbed-wire-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-dark-dali.jpg
+- name: abe-lincoln-one-satan-red-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-satan-red-file-00-00-00-00.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-blue-circuit-5.jpg
+- name: gypsy-wagon-gypsywagon-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-post-modern.jpg
+- name: hollywood-building-hollywood-building-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-purple-pond.jpg
+- name: san-francisco-street-view-san-francisco-street-view-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-atari-missle.jpg
+- name: ellis-island-ellisisland-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-spagetti-accident.jpg
+- name: store-on-corner-oldcabin-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-diego-rivera1.jpg
+- name: school-clouds-church-clouds-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-yellow-paper.jpg
+- name: old-door-lock-old-door-lock-2-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-plentiful.jpg
+- name: bordercrossing-bordercrossing-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-sand-paper.jpg
+- name: machine-road-machine-road-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-blue-electricity.jpg
+- name: old-school-house-old-schoolhouse-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-neo-instinct.jpg
+- name: blossombar-green-zuma-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-green-zuma-file-00-00-24-99.jpg
+- name: carry-load-carryload-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-hot-spicy.jpg
+- name: catacombs-catacombs-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-blue-electricity.jpg
+- name: server-cloud-server-racks-door-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-blue-circuit-5.jpg
+- name: window-window-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-internet-numbers.jpg
+- name: machine-road-machine-road-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-aqua.jpg
+- name: oldbarn-oldbarn-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-colorful-blocks.jpg
+- name: nazi-invasion-IMG_7169.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_7169.jpg
+- name: berlinwall-DSC-0084-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-gan-vogh.jpg
+- name: birdhouse-birdhouse-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-deep-connections.jpg
+- name: statue-of-liberty-front-view-statueofliberty-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-blue-electricity.jpg
+- name: sand-hand-sand-hand-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-alberto-giacometti.jpg
+- name: mistywoods-babyfoot-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-bright-sand.jpg
+- name: gypsy-wagon-gypsywagon-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-monet-one.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-nazi-poster.jpg
+- name: oldtrain-oldtrain-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-colorful-dream.jpg
+- name: birdhouse-birdhouse-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-monet-one.jpg
+- name: dragon-desert-desert-dragon.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon.jpg
+- name: mosaic-face-mosaic-face-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-constitution.jpg
+- name: eduardo-eduardo-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-matrix.jpg
+- name: dc-statue-dcstatue-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-constitution.jpg
+- name: oldsmallboat-oldsmallboat-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-alien-goggles.jpg
+- name: blossombar-post-modern-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-post-modern-file-00-00-24-99.jpg
+- name: window-window-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-satan-red.jpg
+- name: blossombar-rainbow-festival-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-rainbow-festival-file-00-00-50-62.jpg
+- name: aws-s3-stories-mosaic-face-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-mosaic-face-blue-circuit-3.jpg
+- name: old-school-house-old-schoolhouse-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-marcel-duchamp.jpg
+- name: 35562068104_fa20c57575-nazi-invasion.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35562068104_fa20c57575-nazi-invasion.jpg
+- name: berlinwall-DSC-0084-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-yellow-paper.jpg
+- name: oldtrain-oldtrain-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-ww2-dresden.jpg
+- name: ellis-island-ellisisland-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-pablo-blue.jpg
+- name: old-church-oldchurch-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-dali-two.jpg
+- name: oldhotel-oldhotel-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-colorful-dream.jpg
+- name: trucksilo-trucksilo-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-emily-carr.jpg
+- name: docks-docks-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-gred-mash.jpg
 ---
 She Can't Afford To Stay Alive In The US, But She Can In Canada.&nbsp;Helping Those Who Care.&nbsp;Jim Acosta Questions Trump On 'coziness' With Dictators.&nbsp;Kiwanis Club Of Allen Park Holds Kids Day.&nbsp;Tulsa Town Hall Marks 85th Season.&nbsp;Make Your Own Beautiful, Durable Concrete Countertops.&nbsp;15th Free Chapel Forward Conference Welcomes More Than 11,000 And Seems Here To Stay.&nbsp;Christian Concert Planned For Stevenson Unit Chapel Fundraiser.&nbsp;
